video-06-tls-cert-manager/gitea-ssh-tcp.yaml
  # gitea-ssh-tcp.yaml
  apiVersion: traefik.io/v1alpha1
  kind: IngressRouteTCP
  metadata:
    name: gitea-ssh
    namespace: gitea
  spec:
    entryPoints:
      - ssh
    routes:
      - match: HostSNI(`*`)
        services:
          - name: gitea
            port: 2222
